# streamdiffusionapi

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
configs/: default.yaml
docker/: Dockerfile  Dockerfile.runpod  docker-compose.yml  runpod_handler.py
docs/: DAYDREAM_REPLACEMENT.md
scripts/: build_and_push.bat  build_image.py  create_image.py  pod_ssh.py  runpod_cmd.py
src/: __init__.py
src/api/: app.py
src/api/models/: __init__.py  requests.py  responses.py
src/api/routes/: health.py  streams.py
src/pipeline/: __init__.py  manager.py  wrapper.py
src/streaming/: __init__.py  frame_bridge.py  mediamtx.py
tests/: __init__.py  conftest.py  test_api.py
